--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
         format_sql: true
   datasource:
     platform: postgres
-    url: jdbc:postgresql://localhost:5432/mydb
+    url: jdbc:postgresql://localhost:5432/librarydb
     username: postgres
     password: postgres
-    driverClassName: org.postgresql.Driver
+#    driver-class-name: org.postgresql.Driver
