--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,11 +5,13 @@ spring:
     username: postgres
     password: postgres
     driverClassName: org.postgresql.Driver
+  liquibase:
+    change-log: classpath:db/changelog/changelog-master.yml
   jpa:
     database: POSTGRESQL
     show-sql: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     properties:
       hibernate:
         format_sql: true
